Revert "fix: align scrollbar names with Figma"
This reverts commit 00061b9c455e408154fba76ebec504b04d95018f.

--- a/src/components/sbb-dialog/sbb-dialog.scss
+++ b/src/components/sbb-dialog/sbb-dialog.scss
@@ -213,7 +213,7 @@
 }
 
 .sbb-dialog__content {
-  @include sbb.scrollbar-positive;
+  @include sbb.scrollbar;
 
   padding-inline: var(--sbb-dialog-padding-inline);
   padding-block: var(--sbb-dialog-padding-block);
