--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -140,7 +140,7 @@
 }
 
 .sbb-navigation-section__wrapper {
-  @include sbb.scrollbar-negative;
+  @include sbb.scrollbar-dark;
 
   height: 100%;
   padding-block: var(--sbb-navigation-section-padding-block);
