--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -199,7 +199,7 @@
 
 .sbb-navigation__content {
   @include transition(transform);
-  @include sbb.scrollbar-negative;
+  @include sbb.scrollbar-dark;
 
   display: flex;
   flex-direction: column;
