--- a/src/components/sbb-train-formation/sbb-train-formation.scss
+++ b/src/components/sbb-train-formation/sbb-train-formation.scss
@@ -21,7 +21,7 @@
 }
 
 .sbb-train-formation {
-  @include sbb.scrollbar-positive;
+  @include sbb.scrollbar-light;
 
   display: grid;
   grid-template:
