--- a/src/global/styles/mixins/scrollbar.scss
+++ b/src/global/styles/mixins/scrollbar.scss
@@ -37,14 +37,14 @@
     transparent;
 }
 
-@mixin scrollbar-negative {
+@mixin scrollbar-dark {
   @include scrollbar;
 
   --sbb-scrollbar-color: var(--sbb-color-white-alpha-30);
   --sbb-scrollbar-color-hover: var(--sbb-color-white-alpha-60);
 }
 
-@mixin scrollbar-positive {
+@mixin scrollbar-light {
   @include scrollbar;
 
   --sbb-scrollbar-color: var(--sbb-color-black-alpha-30);
